<resources>
    <string name="app_name">SecretNotifications</string>
    <string name="StartBtn">Start Secret Mode</string>
    <string name="EndBtn">Next stage</string>
    <string name="StartTxt">Choose notification\'s quantity and priority</string>
    <string name="EndTxt">Press the volume button to get notifications.\nYour task is to yell out letters that match the vibrations you selected in the previous window. \"A\" is your highest priority vibration, followed by \"B\", and so forth.\nThere may be more than one vibration in a sequence. Sequences are always in order of priority. For example, \"A\" can be followed by any category, but \"B\" cannot be followed by \"A\".\n\nYour first two tasks are practice. The correct answers will appear on the bottom of the screen when the vibrations are triggered.</string>
    <string name="ConditionTxt">Current condition:</string>
    <string name="ConditionIndex"></string>
    <string name="StartText">Start</string>
    <string name="userIdTxt">Enter User Id</string>
    <string name="NotificationListenerExampleService">NotificationListenerExampleService</string>

    <string name="patternChooseTxt">Click buttons for vibration patterns. Choose %1$s of them that you think are the easiest to distinguish. Drag to rank in order of perceived urgency.</string>
    <string name="toptxt">Top Priority</string>
    <string name="bottomtxt">Lowest Priority</string>
    <string name="doneTxt">Done</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>

    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="purple">purple</string>

    <string-array name="ranking_options">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string name="quantity_prompt_1">Priority 1</string>
    <string name="quantity_prompt_2">Priority 2</string>
    <string name="quantity_prompt_3">Priority 3</string>
    <string name="quantity_prompt_4">Priority 4</string>
    <string name="quantity_prompt_5">Priority 5</string>

    <string-array name="quantity_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="endAppTxt">All the tasks are finished! The experiment conductor will now guide you further. Do not close this window.</string>

</resources>
