<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"

        android:layout_marginLeft="18dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/patternChooseTxt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:layout_marginTop="301dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/toptxt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="TextView"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:text="@string/bottomtxt" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="18dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="108dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/rank2"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="76dp"
        android:entries="@array/ranking_options"
        app:layout_constraintBottom_toBottomOf="@+id/rank3"
        app:layout_constraintEnd_toEndOf="@+id/rank3"
        app:layout_constraintStart_toStartOf="@+id/rank3"
        app:layout_constraintTop_toTopOf="@+id/rank1" />

    <Spinner
        android:id="@+id/rank4"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="82dp"
        android:entries="@array/ranking_options"
        app:layout_constraintBottom_toBottomOf="@+id/rank5"
        app:layout_constraintEnd_toEndOf="@+id/rank5"
        app:layout_constraintStart_toStartOf="@+id/rank5"
        app:layout_constraintTop_toTopOf="@+id/rank3" />

    <Spinner
        android:id="@+id/rank5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginBottom="12dp"
        android:entries="@array/ranking_options"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintStart_toStartOf="@+id/done"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Spinner
        android:id="@+id/rank3"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginBottom="247dp"
        android:entries="@array/ranking_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rank4"
        app:layout_constraintStart_toStartOf="@+id/rank4" />

    <Spinner
        android:id="@+id/rank1"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="196dp"
        android:entries="@array/ranking_options"
        app:layout_constraintBottom_toTopOf="@+id/rank4"
        app:layout_constraintEnd_toEndOf="@+id/rank2"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/divider3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:onClick="patternB"
        android:text="@string/b"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="20dp"
        android:onClick="patternD"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="27dp"
        android:onClick="patternA"
        android:text="@string/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:onClick="patternC"
        android:text="@string/c"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="39dp"
        android:onClick="patternE"
        android:text="@string/e"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:onClick="done"
        android:text="@string/doneTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>