<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/StartTxt"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="504dp"

        android:entries="@array/quantity_arrays"
        android:prompt="@string/quantity_prompt_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="448dp"

        android:entries="@array/quantity_arrays"

        android:prompt="@string/quantity_prompt_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:onClick="setUpLaunch"
        android:text="@string/StartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView_spin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="504dp"

        android:text="@string/quantity_prompt_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/quantity_prompt_1" />

    <TextView
        android:id="@+id/textView_spin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="448dp"


        android:text="@string/quantity_prompt_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_spin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="448dp"


        android:text="@string/quantity_prompt_3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="448dp"

        android:entries="@array/quantity_arrays"

        android:prompt="@string/quantity_prompt_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView_spin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="448dp"


        android:text="@string/quantity_prompt_4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="448dp"

        android:entries="@array/quantity_arrays"

        android:prompt="@string/quantity_prompt_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_spin5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="448dp"


        android:text="@string/quantity_prompt_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner4"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="448dp"

        android:entries="@array/quantity_arrays"

        android:prompt="@string/quantity_prompt_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>